# grub-rust-hello

./: Cargo.toml  build.rs
.cargo/: config.toml
grub_rust_core/: Cargo.toml
grub_rust_core/src/: lib.rs
grub_rust_example/: Cargo.toml
grub_rust_example/src/: lib.rs
src/: grub_lib.rs  lib.rs
